@@ -28,6 +28,7 @@ Bugs fixed
 * #3683: sphinx.websupport module is not provided by default
 * #3683: Failed to build document if builder.css_file.insert() is called
 * #3714: viewcode extension not taking ``highlight_code='none'`` in account
+* #3698: Moving :doc: to std domain broke backwards compatibility
 
 Testing
 --------
